# coli-game-engine

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE
include/: Common.hxx  Utility.hxx
include/Common/: Identifiable.hxx  KeepsChange.hxx  Singleton.hxx  Stateful.hxx
include/Debug/: Logger.hxx
include/Example/: Blocks.hxx  Player.hxx
include/File/: AssetLoader.hxx  Loader.hxx  MeshLoader.hxx
include/Game/: Asset.hxx  Behavioral.hxx  Component.hxx  Entity.hxx  Object.hxx  Scene.hxx
include/Game/Components/: Collider.hxx  Drawable.hxx  PhysicalBody.hxx  Transform.hxx
include/Game/Objects/: Camera.hxx
include/Generic/: Configuration.hxx  Engine.hxx  FileSystem.hxx  GameSystem.hxx  GraphicSystem.hxx  Module.hxx  TimeManager.hxx
include/Geometry/: Collider.hxx  GlmHelper.hxx  Mesh.hxx  PhysicalBody.hxx  Transform.hxx  Vertex.hxx
include/Graphics/: Buffer.hxx  Context.hxx  Drawable.hxx  Material.hxx  Program.hxx  Renderer.hxx  Shader.hxx  Texture.hxx  VertexArray.hxx  Window.hxx
include/Input/: Axis.hxx  Event.hxx  Key.hxx  Map.hxx
include/Visual/: Camera.hxx  Color.hxx  Texture.hxx
libs/glad/: glad.c
libs/glad/glad/: glad.h
src/: Blocks.cpp
